# Yuxiang_ROS_complete

./: README.md
chapt8/chapt8_ws/: frames_2025-03-13_15.10.12.gv  frames_2025-03-13_16.13.35.gv  frames_2025-03-13_16.15.25.gv
chapt8/chapt8_ws/install/: local_setup.sh  setup.sh
chapt8/chapt8_ws/log/: latest_build
chapt8/learn_pluginlib/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt8/learn_pluginlib/log/: latest_build
chapter2/chapt2/c2_1/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  ros2_cpp_node  ros2_cpp_node.cpp  ros2_python_node.py
chapter2/chapt2/c2_1/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
chapter2/chapt2/install/: local_setup.sh  setup.sh
chapter2/chapt2/log/: latest_build
chapter2/chapt2_4/: novel1.txt  novel3.txt
chapter2/chapt2_4/install/: local_setup.sh  setup.sh
chapter2/chapt2_4/log/: latest_build
chapter3/chapt3_2/: novel1.txt  novel2.txt
chapter3/chapt3_2/install/: local_setup.sh  setup.sh
chapter3/chapt3_2/log/: latest_build
chapter3/chapt3_4/.colcon/: defaults.yaml
chapter3/chapt3_4/install/: local_setup.ps1  local_setup.sh  setup.sh
chapter3/chapt3_4/log/: latest_build
chapter4/face_detect/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapter4/face_detect/log/: latest_build
chapter5/: tf.rviz
chapter5/chapt5_1/install/: local_setup.sh  setup.sh
chapter5/chapt5_1/log/: latest_build
chapter5/chapt5_2/: frames_2025-03-06_21.40.41.gv
chapter5/chapt5_2/install/: setup.bash  (+4 more)
(+168 files in other folders)
